 * Use mpd's "setvol" command instead of the deprecated "volume". Thanks to
   Jan Hruban for reporting this and sending a patch.
 * Skipping the current song would lead to interruptions in the audio stream
   if it was the last entry in the playlist. Fixed this by auto-queuing before
   skipping tracks. Thanks to Artem Savkov for noticing this and providing a
   patch.

== 0.6.0 (30 Apr 2011) ==

 * Cleaned up the configuration options regarding cover art
 * Show a proper error message when the connection to MPD fails
 * Properly report errors during template rendering
 * Show artists in search result pages again
 * Added an option to hide the credits
 * Tracks with artist featuring others no longer trigger compilation mode
 * Genre/artist links can now be opened in a new browser tab
 * (Hopefully) fixed an encoding issue that would cause errors in search
 * Reduced the number of HTTP requests when the current song has no cover art
 * Generally reduced the number of requests to mpd
 * Fixed an issue that could cause errors when modwsgi reloaded the application
 * Rewrote/reorganized most of the javascript code
 * Added special CSS for mobile devices
 * Fixed compatibility with python-mpd 0.3.0
 * Updated the included libraries to scriptaculous 1.9.0 / prototype 1.7
 * Updated example config files for apache
 * Added a proper favicon
 * Some API changes

== 0.5.2 (02 Dec 2010) ==

 * Use mpd's "consume" command if available (versions >= 0.15)
 * Added support for in-directory cover art
 * Cover art can now be cached
 * Auto-queuing can now be limited to a specific genre
 * Albums are now properly sorted on the search result page
 * The current track's time display should be updated much more smoothly now

== 0.5.1 (07 Jul 2010) ==

 * Catch some more exceptions and properly close all connections if they occur
 * Added classifiers to setup.py
 * fookebox' version information is now read from the package meta data

== 0.5.0 (01 Jul 2010) ==
